[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mortgate"
version = "0.1.0"
description = "A Python project for managing mortgages"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.0"
numpy = "^1.21.0"
jupyterlab = "^3.0.16"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
